# my-mokio-agent

./: .gitignore  NOTEPAD.md  README.md  debug_test.py  fix_and_test.py  hello.py  pyproject.toml  requirements.txt  run.py  test_final.py  x.py
app/: __init__.py  admin.py  auth.py  config.py  forms.py  models.py
app/templates/: base.html  dashboard.html  login.html  register.html  users.html
flask-admin/: config.py
flask-admin/app/: __init__.py  admin.py  auth.py  models.py
flask-admin/app/templates/: base.html
flask_admin/: app.py  auth.py  config.py  main.py  models.py
flask_admin/static/: style.css
flask_admin/templates/: base.html  dashboard.html  index.html  login.html  register.html
project/: app.py  requirements.txt
project/app/: __init__.py  config.py  decorators.py  extensions.py  models.py
project/app/admin/: __init__.py  routes.py
project/app/auth/: __init__.py  routes.py
src/mokioclaw/: __init__.py  __main__.py
src/mokioclaw/agents/: __init__.py  code_agent.py  search_agent.py
src/mokioclaw/cli/: __init__.py  app.py
src/mokioclaw/core/: __init__.py  agent.py  approval.py  checkpoint.py  paths.py  session.py  state.py  trace.py
src/mokioclaw/graph/: __init__.py  memory.py  nodes.py  state.py  workflow.py
src/mokioclaw/prompts/: __init__.py  stage2.py  stage3.py  stage4.py
src/mokioclaw/providers/: __init__.py  openai_provider.py
tests/: test_approval.py  test_checkpoint.py  test_intent_router.py  test_logo.py  test_mokioclaw_agent.py  test_session.py  test_session_events.py  test_trace.py  test_tui.py
(+16 files in other folders)
